--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AJAX test</title>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 
         <script>
             $(document).ready(function(){
@@ -13,16 +13,21 @@
                         datatype: 'jsonp',
                         jsonp: 'callback',
                         jsonpCallback: 'jsonpcallback',
-                        success: function(jsonp, status, jqXHR) {
-                            console.log('success');
-                            jsonp = jsonp.substring('jsonpcallback('.length, jsonp.length); 
-                            jsonp = jsonp.substring(0, jsonp.length-1);
-                            jsonp = $.parseJSON(jsonp);
+                        success: function(data, textStatus, jqXHR) {
+                            data = data.substring('jsonpcallback('.length, data.length); 
+                            data = data.substring(0, data.length-1);
+                            var json = $.parseJSON(data);
 
-                            $('#results').html(jsonp.results.join('<br>'));
+                            $('#results').html(json.results.join('<br>'));
                         },
-                        error: function() {
-                            console.log('error');
+                        error: function(jqXHR, textStatus, errorThrown) {
+                        	if (console && console.log) {
+                        	    console.log('jquery ajax error');
+                        	    console.log('textStatus');
+                        	    console.log(textStatus);
+                        	    console.log('errorThrown');
+                        	    console.log(errorThrown);
+                        	}
                         }
                     });
                 });
