--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,64 @@
+<!--
+Lyle Scott, III
+lyle@digitalfoo.net
+http://digitalfoo.net
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title>AJAX test</title>
+        <title>IntelliType Demo</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script type="text/javascript" src="demo.js"></script>
+        
+        <style>
+            h1 { 
+                margin: .2em 0;
+                font-size: 1.2em;
+            }
+            #info {
+                font-size: .8em;
+            }
+            #container {
+                margin: .5em auto 0 auto;
+                width: 400px;
+                font-size: 1.2em;
+            }
+            #userinput {
+                font-size: 1.2em;
+                width: 100%;
+            }
+            #suggestions {
+                font-size: 1.1em;
+                height: 5.5em;
+            }
+        </style>
     </head>
 <body>
+<div id="container">
 
-<input type="text" id="userinput" />
+<div id="info">
+    <p>Start the server:</p>
+    <ol>
+        <li>install python-lxml</li>
+        <li>python intellitype.wsgi</li>
+    </ol>
+    <p>As you type, the program suggest autocompletion options based on what
+    has previously been entered.</p>
+    <ol>
+        <li>the cat and the fox&lt;ENTER&gt;</li>
+        <li>the cat and the mouse&lt;ENTER&gt;</li>
+        <li>the cat and the&lt;WAIT-AND-LOOK&gt;</li>
+    </ol>
+    <p>You can <a href="./xmls">browse the <em>xmls</em> directory</a> to view
+    generated XML.</p>
+</div>
+
+<p>Try it out...</p>
+<p><input type="text" id="userinput"/><p>
 <div id="suggestions"></div>
-<div id="status"></div>
+<div id="existing"></div>
 
+</div>
 </body>
 </html>
