Let the port to the wsgi server be specified from the user or defaulted to 8080.

--- a/demo.html
+++ b/demo.html
@@ -50,7 +50,10 @@ http://digitalfoo.net
     provided by the WSGI module that is in the Python standard library.</p>
     <ul>
         <li>Make sure the <a href="http://lxml.de">lxml</a> Python library is installed.</li>
-        <li>Start the server by running <em>intellitype.wsgi</em> with python.</li>
+        <li>Start the server by running <em>intellitype.wsgi</em> with python.
+            <br/><span style="font-size:smaller;"><strong>Note:</strong>
+            listens on port 8080, but you can specify another port as an argument.</span>
+        </li>
     </ul>
     <p>As you type, the program suggest autocompletion options based on what
     has previously been entered.</p>
