Include a status div.

--- a/demo.html
+++ b/demo.html
@@ -74,6 +74,7 @@ http://digitalfoo.net
 </div>
 <input type="text" id="userinput"/>
 <div id="suggestions"></div>
+<div id="status"></div>
 <div id="existing"></div>
 
 </div>
