Add ability to fetch all queries in the system. Create a callback for them. Add to demo html.

--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,9 @@ http://digitalfoo.net
             #suggestions {
                 padding: .1em .3em;
                 font-size: 1.1em;
-                background-color: #CCC;
+                background-color: #E1E1E1;
+                height: 7em;
+                border: 1px solid #999;
             }
         </style>
     </head>
@@ -75,7 +77,9 @@ http://digitalfoo.net
 <input type="text" id="userinput"/>
 <div id="suggestions"></div>
 <div id="status"></div>
-<div id="existing"></div>
+<br/>
+<h3>Existing Queries</h3>
+<div id="existing"></div></p>
 
 </div>
 </body>
