Add github link.

--- a/demo.html
+++ b/demo.html
@@ -49,7 +49,9 @@ http://digitalfoo.net
     For this demo, just run the <em><a href="intellitype.wsgi">intellitype.wsgi</a></em>
     Python program directly to launch
     <a href="http://docs.python.org/library/wsgiref.html#module-wsgiref.simple_server">a small HTTP server</a>
-    provided by the WSGI module that is in the Python standard library.</p>
+    provided by the WSGI module that is in the Python standard library. See the
+    full source at 
+    <a href="https://github.com/LyleScott/IntelliType">https://github.com/LyleScott/IntelliType</a>.</p>
     <ul>
         <li>Make sure the <a href="http://lxml.de">lxml</a> Python library is installed.</li>
         <li>Start the server by running <em>intellitype.wsgi</em> with python.
