Give a better example.

--- a/demo.html
+++ b/demo.html
@@ -64,7 +64,8 @@ http://digitalfoo.net
     <ol>
         <li>the cat and the fox&lt;ENTER&gt;</li>
         <li>the cat and the mouse&lt;ENTER&gt;</li>
-        <li>the cat and the&lt;WAIT-AND-LOOK&gt;</li>
+        <li>the cat and the mouseymouse&lt;ENTER&gt;</li>
+        <li>the cat and the mou&lt;WAIT-AND-LOOK&gt;</li>
     </ol>
     <p>You can <a href="./xmls">browse the <em>xmls</em> directory</a> to view
     the generated XML. New entries are inserted into the XML in a tree-like
