--- a/demo/demo.html
+++ b/demo/demo.html
@@ -9,7 +9,8 @@ http://digitalfoo.net
     <head>
         <title>IntelliType Demo</title>
         
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>-->
+        <script type="text/javascript" src="jquery.min.js"></script>
         <script type="text/javascript" src="demo.js"></script>
         
         <style>
